--- a/f/fl/flu/flubit.com.html
+++ b/f/fl/flu/flubit.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the flubit.com privacy policy that was archived on 2013-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130623043711id_/http%3A//flubit.com/Flubit/Privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the flubit.com privacy policy that was archived on 2013-12-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131224002456id_/https%3A//www.flubit.com/Flubit/Privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -21,36 +21,94 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 <div id="cookiepage">
 <h1>FLUBIT LIMITED - PRIVACY POLICY</h1>
 <p>(flubit.com)</p>
-<p>UPDATED: 21/05/2012</p>
-<p>This privacy statement discloses the privacy practices for the pre-launch data retrieval on www.Flubit.com If you have questions or concerns regarding this statement, you should first contact Flubit Ltd by email.</p>
+
+<p>UPDATED: [15/07/2013]</p>
+
+<p>This privacy statement discloses the privacy practices for the soft launch data retrieval on www.Flubit.com.</p>
+<p>If you have questions or concerns regarding this statement, you should first contact Flubit Ltd by email.</p>
 <p><strong>1. Introduction</strong><br>
 Flubit Ltd is committed to protecting the privacy of its users. This statement discloses Flubit Ltd's privacy practices and is incorporated into, and subject to the terms of, Flubit Ltd's Terms of Use. The purpose of this statement is to inform you as to:</p>
+
 <ul>
-  <li>What kinds of information Flubit Ltd collects from users of the Flubit Ltd website and how such information is collected;</li>
-  <li>How the information is used by Flubit Ltd;</li>
-  <li>Whether Flubit Ltd discloses any user information to third parties;</li>
-  <li>How you can access, update or delete any information collected about you by Flubit Ltd; and</li>
-  <li>The security procedures implemented by Flubit Ltd to protect your personal information.</li>
+<li>What kinds of information Flubit Ltd collects from users of the Flubit Ltd website and how such information is collected.</li>
+<li>How the information is used by Flubit Ltd;</li>
+<li>Details of any disclosures made by Flubit Ltd of user information to third parties;</li>
+<li>Where we store your personal data;</li>
+<li>How you can access, update or delete any information collected about you by Flubit Ltd; and</li>
+<li>The security procedures implemented by Flubit Ltd to protect your personal information.</li>
 </ul>
+
 <p>Flubit Ltd may change this policy from time to time. If so, any such changes will be posted on this page, so that Flubit Ltd may keep its users informed of its information collection practices. Accordingly, we recommend that you consult this page frequently so that you are aware of our latest policy.</p>
-<p><strong>2. How We Collect Information</strong><br>
-  When you sign up to Flubit Ltd, we will ask you for an email address. When feasible, we do automatically collect your IP address.</p>
+
+<p><strong>2. Information We Will Collect And How We Collect It</strong><br>
+When you sign up to Flubit Ltd and make your first demand, we will ask you for an email address. We may also collect your IP address too.</p>
+<p>Once you have made your first demand you will be able to create a profile on our website. This is completely optional, but this information will improve the quality of your account and allow us to get to know you better and provide you with offers and information most relevant to you. You will be able to add details and update details about your gender, age, occupation, employment status, income, number of children and relationship status.</p>
+<p>We may collect and process the following data about you:</p>
+
+<ul>
+<li>Information that you provide by filling in forms on our website. This includes information 	provided at the time of registering to use our site, subscribing to our service, posting material or 	requesting further services. We may also ask you for information when you enter a competition 	or promotion sponsored by Flubit Ltd, and when you report a problem with our site.</li>
+<li>If you contact us, we may keep a record of that correspondence.</li>
+<li>We may also ask you to complete surveys that we use for research purposes, although you do 	not have to respond to them.</li>
+<li>Details of transactions you carry out through our site and of the fulfilment of your orders.</li>
+<li>Details of your visits to our site [including, but not limited to, traffic data, location data, weblogs and other communication data, whether this is required for our own operational purposes or 	otherwise] and the resources that you access.</li>
+</ul>
+
+<p>When you make an Order on Flubit certain personal details (eg name, phone number, email and delivery details) are passed directly to the merchant that you have placed the order with. Flubit also stores a copy of these details. Please see section 7 for more information regarding passing this Order information on to the relevant merchant. Please note, if we were not able to pass this information on, we would be unable to inform the merchant of your order and the delivery details.</p>
+<p>Payment information is collected through PayPal. Flubit never has access to your credit card details or PayPal account information, other than the minimum required to understand a purchase has been made securely. By purchasing through Flubit please make sure you are happy with the PayPal privacy policy too.</p>
 <p><strong>3. How We Use and Disclose Your Information</strong><br>
-  We use your email to provide information to you, such as to notifications when our site changes, newsletters, emails that you request, or to personalise the site in accordance with your requests. We will provide you with directions in all emails and newsletters on how to be taken off our newsletter list.<br>
-  As a general practice, we do not sell to, or share your personally identifiable information with third parties. So, for example, we do not sell your email address to spammers (phew!) or mass marketers. We may on occasion email offers to you of products and services in conjunction with our partners.</p>
-<p><strong>4. Controlling or Changing Your Information</strong><br>
-  You can access and update your contact information by emailing Flubit (helpme [at] flubit.com). However, to the extent that such information is also stored in other databases, we cannot always ensure that such corrections or deletions will immediately reach the other databases. Also, you cannot manually change your IP address, although we may change it automatically.</p>
-<p><strong>5. Cookies and Other Tracking Methods</strong><br>
-  Cookies are small pieces of information stored on your hard drive, not on our site. We use cookies on our site for a number of reasons. First, cookies can help us provide information that is targeted to your interests. Second, cookies allow us to better understand how users use our site, which in turn helps us focus our resources on features that are most popular with our users. You are always free to decline our cookies if your browser permits, but some parts of our site may not work properly in that case.<br>
-  In addition to using cookies, in some circumstances we may track or collect information about your activities on our site by the numeric address assigned to the computer you are using (your IP address) or by the URLs that you come from or leave to. This information is collected and shared with our partners in an aggregated, non-personally identifiable basis.</p>
-<p><strong>6. Other Sites</strong><br>
-  The Flubit Ltd website may contain links and references to other websites and organisations, including websites owned or operated by Flubit Ltd's advertisers/partners. Please note that different rules may apply to the collection, use or disclosure of your information by third party service providers or vendors or any other sites you encounter on the Internet (even if these sites are branded with our branding or framed by our site). We encourage you to investigate and ask questions before disclosing information to third parties.</p>
-<p><strong>7. Limits on Our Abilities</strong><br>
-  Although your privacy is very important to us, due to the existing legal and technical environment, we cannot fully ensure that your private communications and other personally identifiable information will not be disclosed to third parties. For example, we may be forced to disclose information to the government or third parties under certain circumstances, or third parties may unlawfully intercept or access transmissions or private communications. Additionally, we can (and you authorise us to) disclose any information about you to private entities, law enforcement or other government officials as we, in our sole discretion, believe necessary or appropriate to investigate or resolve possible problems or inquiries.</p>
-<p><strong>8. Security</strong><br>
-  We use industry standard efforts to safeguard the confidentiality of your personal identifiable information, such as firewalls and Secure Socket Layers where appropriate.</p>
-<p><strong>9. Further Questions</strong><br>
-  Any further questions you have should be directed to: <a href="mailto:helpme@flubit.com">helpme [at] flubit.com</a></p>
+We use your email to provide information to you, such as to notifications when our site changes, newsletters, emails that you request, or to personalise the site in accordance with your requests. We will provide you with directions in all emails and newsletters on how to be taken off our newsletter list this will usually be a link directing you to our website allowing you to change your notification settings, but you can also send us an email using the details below to let us know if you wish to change the notifications you receive.</p>
+<p>Where you have consented to us doing so, we may share your personal data with selected third parties. We may share aggregated “My Puzzle” information with third parties. However, we will not share any of your individual "My Puzzle" information with third parties unless you consent to us doing so.</p>
+<p>We may also use your data, to provide you with information about goods and services which may be of interest to you and we may contact you by electronic means (e-mail or SMS) if you have consented to this.</p>
+<p>If you do not want us to use your data in this way, or to pass your details on to third parties for marketing purposes, please tick the relevant box situated on the form on which we collect your information.</p>
+<p>We do not disclose information about identifiable individuals to third parties (without your consent), but we may provide them with aggregate information about our users (for example, we may inform them that 50 men aged under 30 have made demands in relation to computer games on any given day. We may also use such aggregate information to help merchants reach the kind of audience they want to target.</p>
+<p>We may disclose your personal information to third parties:</p>
+
+<ul>
+<li>In the event that we sell or buy any business or assets, in which case we may disclose your personal data to the prospective seller or buyer of such business or assets.</li>
+<li>If Flubit Ltd or substantially all of its assets are acquired by a third party, in which case personal data held by it about its customers will be one of the transferred assets.</li>
+<li>If we are under a duty to disclose or share your personal data in order to comply with any legal obligation, or in order to enforce or apply our terms of use [as found on our website] and other agreements; or to protect the rights, property, or safety of Flubit Ltd, our customers, or others. This includes exchanging information with other companies and organisations for the purposes of fraud protection and credit risk reduction.</li>
+</ul>
+
+<p>We may on occasion and where you have not opted out, email offers to you of products and services in conjunction with our partners.</p>
+<p>In addition to the uses described above we will also use information held about you in the following ways:</p>
+
+<ul>
+<li>To ensure that content from our website is presented in the most effective manner for you and 	for your computer.</li>
+<li>To provide you with information, products or services that you request from us or which we feel 	may interest you, where you have consented to be contacted for such purposes.</li>
+<li>To carry out our obligations arising from any contracts entered into between you and us.</li>
+<li>To allow you to participate in interactive features of our service, when you choose to do so.</li>
+<li>To notify you about changes to our service.</li>
+</ul>
+
+<p><strong>4. Where We Store Your Personal Data</strong><br>
+The data that we collect from you may be transferred to, and stored at, a destination outside the European Economic Area ("<strong>EEA</strong>"). It may also be processed by staff operating outside the EEA who work for us or for one of our suppliers. Such staff maybe engaged in, among other things,  the fulfilment of your order, the processing of your payment details and the provision of support services. By submitting your personal data, you agree to this transfer, storing or processing. We will take all steps reasonably necessary to ensure that your data is treated securely and in accordance with this privacy policy.</p>
+<p>All information you provide to us is stored on our secure servers. Where we have given you (or where you have chosen) a password which enables you to access certain parts of our site, you are responsible for keeping this password confidential. We ask you not to share a password with anyone.</p>
+<p>Unfortunately, the transmission of information via the internet is not completely secure. Although we will do our best to protect your personal data, we cannot guarantee the security of your data transmitted to our site; any transmission is at your own risk. Once we have received your information, we will use strict procedures and security features to try to prevent unauthorised access.</p>
+
+<p><strong>5. Controlling or Changing Your Information&nbsp;</strong><br>
+You can access and update your contact information by emailing Flubit (<a href="mailto:talktous@flubit.com" style="color:#198CC0;text-decoration:underline;">talktous@flubit.com</a>) or by accessing your profile online. However, to the extent that such information is also stored in other databases, we cannot always ensure that such corrections or deletions will immediately reach the other databases. Also, you cannot manually change your IP address.</p>
+<p><strong>6. Cookies and Other Tracking Methods&nbsp;</strong><br>
+Cookies are small pieces of information stored on your hard drive, not on our site. We use cookies on our site for a number of reasons. By using Flubit you automatically opt-in to us using cookies with you when using our website. First, cookies can help us provide information that is targeted to your interests. Second, cookies allow us to better understand how users use our site, which in turn helps us focus our resources on features that are most popular with our users. Should you decline our cookies, some parts of our site may not work properly.</p>
+<p>The cookies we use on Flubit.com are as follows:</p>
+<p>We currently store a limited amount of cookies when browsing our site to allow us to offer you the best experience from us and allows us to learn and improve what we offer you on the site.</p>
+<p><strong>What is a cookie?</strong><br>
+A cookie is a small text file which is used to differentiate yourself from other users each time you visit us. Below are the cookies we store:</p>
+<p><strong>Infrastructure Cookies</strong><br>
+ci_cookie: This is used by our site to provide session specific information to our system</p>
+<p><strong>Analytics Cookies</strong><br>
+We use Google Analytics to view site usage statistics on the site which allows us to track site usage, we also use these to help us improve the site. For full details on what is stored and why, please visit&nbsp;http://code.google.com/apis/analytics</p>
+<p>Our current configuration of Google Analytics sets the first 4 cookies.</p>
+<p><strong>Opting out</strong><br>
+By using/browsing Flubit.com you are approving the use of cookies as set out above and inline with our cookie policy. If you have an objection to our use of cookies you must either disable cookies on your browser or stop using Flubit.com</p>
+<p>In addition to using cookies, in some circumstances we may track or collect information about your activities on our site by the numeric address assigned to the computer you are using (your IP address) or by the URLs that you come from or leave to. This information is collected and shared with our partners in an aggregated, non-personally identifiable basis.</p>
+<p><strong>7. Other Sites&nbsp;</strong><br>
+The Flubit Ltd website may contain links and references to other websites and organisations, including websites owned or operated by Flubit Ltd's advertisers/partners. Please note that different rules may apply to the collection, use or disclosure of your information by third party service providers or vendors or any other sites you encounter on the Internet (even if these sites are branded with our branding or framed by our site). We encourage you to investigate and ask questions before disclosing information to third parties and to read their privacy policies.</p>
+<p><strong>8. Limits on Our Abilities&nbsp;</strong><br>
+Although your privacy is very important to us, due to the existing legal and technical environment, we cannot fully ensure that your private communications and other personally identifiable information will not be disclosed to third parties. For example, we may be forced to disclose information to the government or third parties under certain circumstances, or third parties may unlawfully intercept or access transmissions or private communications. Additionally, we can (and you authorise us to) disclose any information about you to private entities, law enforcement or other government officials as we, in our sole discretion, believe necessary or appropriate to investigate or resolve possible problems or inquiries.</p>
+<p><strong>9. Security&nbsp;</strong><br>
+We use industry standard efforts to safeguard the confidentiality of your personal identifiable information, such as firewalls and Secure Socket Layers where appropriate.</p>
+<p><strong>9. Further Questions&nbsp;</strong><br>
+Any further questions you have should be directed to:&nbsp;<a href="mailto:talktous@flubit.com" style="color:#198CC0;text-decoration:underline;">talktous@flubit.com</a></p>
   </div>
 
 
