--- a/c/ch/cha/charmeddesign.com.html
+++ b/c/ch/cha/charmeddesign.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the charmeddesign.com privacy policy that was archived on 2013-04-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130409043745id_/http%3A//www.charmeddesign.com/content/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the charmeddesign.com privacy policy that was archived on 2013-12-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131224030131id_/http%3A//www.charmeddesign.com/content/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr" prefix="og: http://ogp.me/ns#"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -14,31 +14,31 @@
 <meta property="og:url" content="http://www.charmeddesign.com/content/privacy-policy">
 <meta property="og:description" content="What information do we collect? We collect information from you when you place an order or subscribe to our newsletter. When ordering or registering on our site, as appropriate, you may be asked to enter your: name, e-mail address, mailing address or phone number. You may, however, visit our site anonymously. What do we use your information for? Any of the information we collect from you may be used in one of the following ways:">
 
-  <link type="text/css" rel="stylesheet" media="all" href="/sites/charmeddesign1012.indiemade.com/files/css/css_143bc0daa3cfa73805c54ce5790958a0.css">
-<link type="text/css" rel="stylesheet" media="print" href="/sites/charmeddesign1012.indiemade.com/files/css/css_494d9aeb04040119e710cae26605fdef.css">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/charmeddesign1012.indiemade.com/files/designkit/designkit-underscore.css?i">
+  <link type="text/css" rel="stylesheet" media="all" href="/sites/charmeddesign1012.indiemade.com/files/css/css_c6e09e18704744699b14705d6c1eb6b7.css">
+<link type="text/css" rel="stylesheet" media="print" href="/sites/charmeddesign1012.indiemade.com/files/css/css_4d0dc4e45aeb4e997681f01d86cfe90c.css">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/charmeddesign1012.indiemade.com/files/designkit/designkit-underscore.css?W">
 <!--[if IE]>
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/underscore/ie.css?i" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/underscore/ie.css?W" />
 <![endif]-->
 <!--[if lte IE 6]>
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/underscore/ie6.css?i" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/underscore/ie6.css?W" />
 <![endif]-->
 <!--[if lte IE 5]>
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/underscore/ie5.css?i" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/underscore/ie5.css?W" />
 <![endif]-->
-  <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="/sites/charmeddesign1012.indiemade.com/files/js/js_baca4e23b35bd2b81b39ee5ec28c45b0.js"></script>
+  <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="/sites/charmeddesign1012.indiemade.com/files/js/js_e3b24272acf13deb4ce16e98d640ed05.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOutgoing": 1, "trackMailto": 1, "trackDownload": 1, "trackDownloadExtensions": "7z|aac|arc|arj|asf|asx|avi|bin|csv|doc|exe|flv|gif|gz|gzip|hqx|jar|jpe?g|js|mp(2|3|4|e?g)|mov(ie)?|msi|msp|pdf|phps|png|ppt|qtm?|ra(m|r)?|sea|sit|tar|tgz|torrent|txt|wav|wma|wmv|wpd|xls|xml|z|zip" }, "lightbox2": { "rtl": 0, "file_path": "/(\\w\\w/)sites/charmeddesign1012.indiemade.com/files", "default_image": "/sites/all/modules/lightbox2/images/brokenimage.jpg", "border_size": 10, "font_color": "000", "box_color": "fff", "top_position": "", "overlay_opacity": "0.8", "overlay_color": "000", "disable_close_click": true, "resize_sequence": 0, "resize_speed": 400, "fade_in_speed": 400, "slide_down_speed": 600, "use_alt_layout": false, "disable_resize": 0, "disable_zoom": false, "force_show_nav": false, "show_caption": true, "loop_items": false, "node_link_text": "View Image Details", "node_link_target": false, "image_count": "Image !current of !total", "video_count": "Video !current of !total", "page_count": "Page !current of !total", "lite_press_x_close": "press \x3ca href=\"#\" onclick=\"hideLightbox(); return FALSE;\"\x3e\x3ckbd\x3ex\x3c/kbd\x3e\x3c/a\x3e to close", "download_link_text": "", "enable_login": false, "enable_contact": false, "keys_close": "c x 27", "keys_previous": "p 37", "keys_next": "n 39", "keys_zoom": "z", "keys_play_pause": "32", "display_image_size": "original", "image_node_sizes": "()", "trigger_lightbox_classes": "", "trigger_lightbox_group_classes": "", "trigger_slideshow_classes": "", "trigger_lightframe_classes": "", "trigger_lightframe_group_classes": "", "custom_class_handler": 0, "custom_trigger_classes": "", "disable_for_gallery_lists": true, "disable_for_acidfree_gallery_lists": true, "enable_acidfree_videos": true, "slideshow_interval": 5000, "slideshow_automatic_start": true, "slideshow_automatic_exit": true, "show_play_pause": true, "pause_on_next_click": false, "pause_on_previous_click": true, "loop_slides": false, "iframe_width": 600, "iframe_height": 400, "iframe_border": 1, "enable_video": false } });
+jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOutbound": 1, "trackMailto": 1, "trackDownload": 1, "trackDownloadExtensions": "7z|aac|arc|arj|asf|asx|avi|bin|csv|doc|exe|flv|gif|gz|gzip|hqx|jar|jpe?g|js|mp(2|3|4|e?g)|mov(ie)?|msi|msp|pdf|phps|png|ppt|qtm?|ra(m|r)?|sea|sit|tar|tgz|torrent|txt|wav|wma|wmv|wpd|xls|xml|z|zip" }, "lightbox2": { "rtl": 0, "file_path": "/(\\w\\w/)sites/charmeddesign1012.indiemade.com/files", "default_image": "/sites/all/modules/lightbox2/images/brokenimage.jpg", "border_size": 10, "font_color": "000", "box_color": "fff", "top_position": "", "overlay_opacity": "0.8", "overlay_color": "000", "disable_close_click": true, "resize_sequence": 0, "resize_speed": 400, "fade_in_speed": 400, "slide_down_speed": 600, "use_alt_layout": false, "disable_resize": 0, "disable_zoom": false, "force_show_nav": false, "show_caption": true, "loop_items": false, "node_link_text": "View Image Details", "node_link_target": false, "image_count": "Image !current of !total", "video_count": "Video !current of !total", "page_count": "Page !current of !total", "lite_press_x_close": "press \x3ca href=\"#\" onclick=\"hideLightbox(); return FALSE;\"\x3e\x3ckbd\x3ex\x3c/kbd\x3e\x3c/a\x3e to close", "download_link_text": "", "enable_login": false, "enable_contact": false, "keys_close": "c x 27", "keys_previous": "p 37", "keys_next": "n 39", "keys_zoom": "z", "keys_play_pause": "32", "display_image_size": "original", "image_node_sizes": "()", "trigger_lightbox_classes": "", "trigger_lightbox_group_classes": "", "trigger_slideshow_classes": "", "trigger_lightframe_classes": "", "trigger_lightframe_group_classes": "", "custom_class_handler": 0, "custom_trigger_classes": "", "disable_for_gallery_lists": true, "disable_for_acidfree_gallery_lists": true, "enable_acidfree_videos": true, "slideshow_interval": 5000, "slideshow_automatic_start": true, "slideshow_automatic_exit": true, "show_play_pause": true, "pause_on_next_click": false, "pause_on_previous_click": true, "loop_slides": false, "iframe_width": 600, "iframe_height": 400, "iframe_border": 1, "enable_video": false } });
 //--><!]]>
 </script>
-</head>
+<script async="true" type="text/javascript" src="https://s.adroll.com/j/roundtrip.js"></script></head>
 <body class="not-front not-logged-in node-type-page no-sidebars designkit page-content-privacy-policy section-content">
   <div id="body-inner">
   <div id="page"><div id="page-inner">
     <div id="header">
             <div id="header-blocks" class="region region-header">
-        <div id="block-imsite-cart" class="block block-imsite region-odd even region-count-1 count-2"><div class="block-inner">
+        <div id="block-imsite-cart" class="block block-imsite region-odd odd region-count-1 count-3"><div class="block-inner">
 
   
   <div class="content">
@@ -51,19 +51,18 @@ jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOut
 
   
 </div></div> <!-- /block-inner, /block -->
-<div id="block-imsite-social_web" class="block block-imsite region-even odd region-count-2 count-3"><div class="block-inner">
+<div id="block-imsite-social_web" class="block block-imsite region-even even region-count-2 count-4"><div class="block-inner">
 
   
   <div class="content">
-    <a title="Find Us on Facebook" href="http://www.facebook.com/charmeddesign1012" target="_self"><img src="http://c721786.r86.cf2.rackcdn.com/facebook_32.png" alt="Facebook"></a><a title="Visit Us on Google+" href="http://plus.google.com/100076829930917577847" target="_self"><img src="http://c721786.r86.cf2.rackcdn.com/google_plus_32.png" alt="Google+"></a><a title="Follow Us on Pinterest" href="http://pinterest.com/charmed1012" target="_self"><img src="http://c721786.r86.cf2.rackcdn.com/pinterest_32.png" alt="Pinterest"></a><a title="Follow Us on Twitter" href="http://twitter.com/charmed1012" target="_self"><img src="http://c721786.r86.cf2.rackcdn.com/twitter_32.png" alt="Twitter"></a><a title="RSS Feed" href="/blog/feed"><img src="http://c721786.r86.cf2.rackcdn.com/rss_32.png" alt="RSS"></a>  </div>
+    <a class="social-facebook" title="Find Us on Facebook" href="http://www.facebook.com/charmeddesign1012" target="_self"><img src="http://c721786.r86.cf2.rackcdn.com/facebook_32.png" alt="Facebook"></a><a class="social-google-plus" title="Visit Us on Google+" href="http://plus.google.com/100076829930917577847" target="_self"><img src="http://c721786.r86.cf2.rackcdn.com/google_plus_32.png" alt="Google+"></a><a class="social-pinterest" title="Follow Us on Pinterest" href="http://pinterest.com/charmed1012" target="_self"><img src="http://c721786.r86.cf2.rackcdn.com/pinterest_32.png" alt="Pinterest"></a><a class="social-twitter" title="Follow Us on Twitter" href="http://twitter.com/charmed1012" target="_self"><img src="http://c721786.r86.cf2.rackcdn.com/twitter_32.png" alt="Twitter"></a><a class="social-rss" title="RSS Feed" href="/blog/feed" target="_self"><img src="http://c721786.r86.cf2.rackcdn.com/rss_32.png" alt="RSS"></a>  </div>
 
   
 </div></div> <!-- /block-inner, /block -->
       </div>
                   <div id="header-logo" class="clear-block">
         <a href="/" title="Home" rel="home">
-          <img src="/sites/charmeddesign1012.indiemade.com/files/imagecache/im_clientsite_logo/sites/charmeddesign1012.indiemade.com/files/website-banner-new-3.jpg?id=927&amp;th=underscore" alt="charmed design Banner" title="charmed design Home">
-        </a>
+          <img alt="charmed design Banner" title="charmed design Home" width="960" src="http://www.charmeddesign.com/sites/charmeddesign1012.indiemade.com/files/imagecache/im_clientsite_logo/website-banner-new-3.jpg?th=underscore&amp;bg=ffffff&amp;w=960&amp;h=&amp;fid=927" id="logo-image">        </a>
       </div>
           </div> <!--/#header -->
     
@@ -78,12 +77,12 @@ jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOut
             <li><a href="/content/home">Home</a></li>
             <li><a href="/store">Shop</a></li>
             <li><a href="/content/about">About</a></li>
-            <li><a href="/news">News</a></li>
             <li><a href="/content/testimonials">Testimonials</a></li>
             <li><a href="/blog">Blog</a></li>
             <li><a href="/content/press">Press</a></li>
             <li><a href="/content/contact">Contact</a></li>
             <li><a href="/content/wholesale">Wholesale</a></li>
+            <li><a href="/search">Search</a></li>
             <li><a href="/content/8002853951">800.285.3951</a></li>
           </ul>
   </div>
@@ -102,6 +101,16 @@ jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOut
 
       <div id="content"><div id="content-inner">
 
+                  <div id="content-top" class="region region-content_top">
+            <div id="block-block-2" class="block block-block region-odd even region-count-1 count-2"><div class="block-inner">
+
+  
+  <div class="content">
+    <script type="text/javascript" src="//&#10;s3.amazonaws.com/scripts.hellobar.com/489734a52e7751c27bf11497756ad92aed30d4d9.js&#10;"></script>  </div>
+
+  
+</div></div> <!-- /block-inner, /block -->
+          </div>
         
                   <div id="content-header">
                           <h1 class="title">Privacy Policy</h1>
@@ -160,7 +169,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOut
   </div>
 
     <div id="footer"><div id="footer-inner" class="region region-footer">
-    <div id="block-imsite-footer" class="block block-imsite region-odd even region-count-1 count-4"><div class="block-inner">
+    <div id="block-imsite-footer" class="block block-imsite region-odd odd region-count-1 count-5"><div class="block-inner">
 
   
   <div class="content">
@@ -170,7 +179,6 @@ jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOut
         <li><a href="/content/email-sign-20-discount">Email Sign Up- 20% Discount</a></li>
         <li><a href="/content/privacy-policy" class="active">Privacy Policy</a></li>
         <li><a href="/contact">Contact</a></li>
-        <li><a href="/search">Search</a></li>
       </ul>
 </div>
 <div id="footer-right">
@@ -180,8 +188,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOut
   <div id="footermessage">
     charmed design * 200 river vista drive, #506, atlanta, ga 30339 * 800.285.3951* lori@charmeddesign.com  </div>
   <div id="sitedevelopedby">
-    Powered By <a href="http://www.indiemade.com/" target="_blank">IndieMade®</a>
-  </div>
+    Powered By <a rel="nofollow" href="http://www.indiemade.com/" target="_blank">IndieMade®</a>  </div>
 </div>
   </div>
 
@@ -189,7 +196,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOut
 </div></div> <!-- /block-inner, /block -->
   </div></div>
   
-      <div id="closure-blocks" class="region region-closure"><div id="block-imsite-closure" class="block block-imsite region-odd odd region-count-1 count-5"><div class="block-inner">
+      <div id="closure-blocks" class="region region-closure"><div id="block-imsite-closure" class="block block-imsite region-odd even region-count-1 count-6"><div class="block-inner">
 
   
   <div class="content">
@@ -206,6 +213,14 @@ jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOut
   })();
 </script>
   </div>
+
+  
+</div></div> <!-- /block-inner, /block -->
+<div id="block-block-1" class="block block-block region-even odd region-count-2 count-7"><div class="block-inner">
+
+  
+  <div class="content">
+    <script type="text/javascript"> adroll_adv_id = "77GK4NJIJNE6FHQASNSN6V"; adroll_pix_id = "GDS2VHZGUNCWHOVDZ3HR4B"; (function () { var oldonload = window.onload; window.onload = function(){    __adroll_loaded=true;    var scr = document.createElement("script");    var host = (("https:" == document.location.protocol) ? "https://s.adroll.com" : "http://a.adroll.com");    scr.setAttribute('async', 'true');    scr.type = "text/javascript";    scr.src = host + "/j/roundtrip.js";    ((document.getElementsByTagName('head') || [null])[0] ||     document.getElementsByTagName('script')[0].parentNode).appendChild(scr);    if(oldonload){oldonload()}}; }()); </script>  </div>
 
   
 </div></div> <!-- /block-inner, /block -->
